2010-01-14  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        [Gtk] Compiler warning: comparisons like 'X<=Y<=Z' do not have their mathematical meaning
        https://bugs.webkit.org/show_bug.cgi?id=33575

        Patch from Magnus Boman <captain.magnus@gmail.com>

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache): fix compiler warnings.

Canonical link: https://commits.webkit.org/44733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53329 268f45cc-cd09-0410-ab3c-d52691b4dbfc